--- a/ServiceTrack/ServiceTrack.csproj
+++ b/ServiceTrack/ServiceTrack.csproj
@@ -23,4 +23,8 @@
       <PackageReference Include="MudBlazor" Version="8.2.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="wwwroot\images\" />
+    </ItemGroup>
+
 </Project>
