--- a/ServiceTrack/ServiceTrack.csproj
+++ b/ServiceTrack/ServiceTrack.csproj
@@ -21,6 +21,7 @@
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       </PackageReference>
       <PackageReference Include="MudBlazor" Version="8.2.0" />
+      <PackageReference Include="MudBlazor.Translations" Version="2.5.0" />
     </ItemGroup>
 
     <ItemGroup>
